Changes in 1.1.1:

	* minor fixes


Changes in 1.1.0:

	* full support big-endian systems


Changes in 1.0.5:

	* fix memory leaks in 'cleanup.gds'
	* add a new function 'is.element.gdsn'
	* add a new function 'gdsCFuncList'
	* add a global variable '.gds.machine' with logical processor information
	* allow closing GDS files in 'showfile.gds'


Changes in 1.0.4:

	* 'apply.gdsn', 'clusterApply.gdsn': make the returned value invisible if as.is="none"
	* 'apply.gdsn' and 'clusterApply.gdsn' support characters
	* add a new function 'moveto.gds' to relocate GDS variables
	* add a new function 'diagnosis.gds' to diagnose the GDS file
	* allow more options in 'read.gdsn' and 'readex.gdsn'
	* fix a bug in 'delete.gdsn': allocated resource is not released in the GDS file
	* add more C functions via 'R_RegisterCCallable'
	* more Unit tests


Changes in 1.0.3:

	* add two new arguments 'allow.duplicate' and 'allow.fork' to the function 'openfn.gds'
	* add a new function 'showfile.gds'
	* allow reading a GDS file simultaneously between multiple forked processes (applied in 'mclapply' etc)
	* support the LinkingTo mechanism, via 'R_RegisterCCallable' and 'R_GetCCallable'


Changes in 1.0.2:

	* add 'size' and 'good' to the returned value from 'objdesp.gdsn' indicating the state of GDS node
	* add a new function 'cache.gdsn'
	* fix the memory issues reported by valgrind


Changes in 1.0.1:

	* remove the argument 'deep' from the function 'cleanup.gds' to simplify calling
	* add a new argument 'replace' to the function 'addfile.gdsn', which allows replacing the existing variable by a new one
	* add a new function 'addfolder.gdsn' allowing a virtual folder linking to other GDS files
	* add 'message' to the returned value from 'objdesp.gdsn', which allows tracking error messages or log information
	* backward compatible with unknown or undefined classes in the current GDS package
	* reduce the package size


Changes in 1.0.0:
