@@ -1,8 +1,8 @@
 Package:	gdsfmt
 Type:	Package
 Title:	R Interface to CoreArray Genomic Data Structure (GDS) files
-Version:	1.1.1.1
-Date:	2014-10-05
+Version:	1.1.1.2
+Date:	2014-10-25
 Depends:	R (>= 2.14.0)
 Imports:	methods
 Suggests:	parallel, RUnit
